# models/user_basic.go
@@ -2,7 +2,7 @@ package models
 
 type UserBasic struct {
 	Common
-	Name     string `gorm:"column:name;type:varchar(100);" json:"name"`        //用户名
+	Username string `gorm:"column:username;type:varchar(100);" json:"name"`    //用户名
 	Password string `gorm:"column:password;type:varchar(32);" json:"password"` //密码
 	Mail     string `gorm:"column:mail;type:varchar(255);" json:"mail"`        //邮箱
 	Phone    string `gorm:"column:phone;type:varchar(20);" json:"phone"`       //手机号
